# CalculationC

./: CMakeLists.txt  README.md
srs/: Calculation.cpp  Calculation.hpp  main.cpp
